<resources>
    <string name="app_name">Toll Pays</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="check_in">Check In</string>
    <string name="toll_fees_pooling">Toll Fees Pooling</string>
    <string name="violations">Violations</string>
    <string name="payment_history">Payment History</string>
    <string name="users">Users</string>
    <string name="discount_request">Discount Request</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="admin_panel">Web Dashboard</string>
    <string name="authorization">Authorization</string>
    <string name="google_maps_key"></string>
    <string name="title_activity_maps">Map</string>
    <string name="speech_prompt">Pronounce Passcode</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="kws_caption">To start demonstration say \"alexa\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="searching_toll">searching for nearest toll</string>
    <string name="toll_found">found</string>
    <string name="invalid_vehicle">invalid vehicle</string>
    <string name="insufficient_balance">you have insufficient balance</string>
    <string name="user_request_accept">Your Request Accepted</string>
    <string name="user_request_rejected">Your Request Rejected</string>
    <string name="create_group">Group is Created</string>
    <string name="toll_checkin">Successfully CheckedIn</string>
    <string name="group_ended">group has been ended</string>
    <string name="contributor_leave_group">Driver removed from group</string>
    <string name="you_left_group">contributor left the group</string>
    <string name="prize_distrubuted">prize distributed</string>
    <string name="group_resumed">Group has been resumed</string>
    <string name="invalid_password">invalid password</string>
    <string name="select_toll">Please select number of toll</string>
    <string name="tracking_on">your tracking is already on</string>
    <string name="tracking_off">your tracking is already off</string>
    <string name="pairing_on">your pairing is already on</string>
    <string name="pairing_off">your pairing is already off</string>
    <string name="password_status_on">your password status already on</string>
    <string name="password_status_off">your password status already off</string>
    <string name="remaining_toll">Resume Group For Remaining Toll</string>
    <string name="toll_updated">Driver updated toll</string>
    <string name="toll_updated_driver">toll updated</string>
    <string name="resuming_group">Resuming group please wait</string>
    <string name="violation_occur">violation occur</string>
    <string name="title_activity_bottom_navigation_view">BottomNavigationView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>